@@ -1,3 +1,11 @@
+2012-04-07 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/string.c:
+	  Added test for strrchr().
+	* src/z80/gen.c,
+	  src/SDCCpeeph.c:
+	  Fixed memory leaks.
+
 2012-04-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/regression/Makefile.in,
